# ggj2026

./: .gitignore  .nvim.lua  CMakeLists.txt  Makefile  debug.raddbg_project  run.bat  todo
assets/: lightshader.frag
assets/test/: testWorld.ldtk
assets/test/testWorld/: AutoLayer.ldtkl
assets/textures/: heist palett.aseprite
assets/world/: game_world.ldtk
assets/world/game_world/: level_0.ldtkl  level_1.ldtkl  level_10.ldtkl  level_11.ldtkl  level_12.ldtkl  level_13.ldtkl  level_14.ldtkl  level_15.ldtkl  level_16.ldtkl  level_17.ldtkl  level_18.ldtkl  level_2.ldtkl  level_3.ldtkl  level_4.ldtkl  level_5.ldtkl  level_6.ldtkl  level_7.ldtkl  level_8.ldtkl  level_9.ldtkl
assets/world/game_world/backups/e54f6bb0-fa90-11f0-abe6-957975aa9344_2026-01-31_11-01-13_crash/: game_world.ldtk
assets/world/game_world/backups/e54f6bb0-fa90-11f0-abe6-957975aa9344_2026-01-31_11-01-13_crash/game_world/: level_0.ldtkl  level_1.ldtkl
assets/world/game_world/backups/e54f6bb0-fa90-11f0-abe6-957975aa9344_2026-02-01_13-28-06/game_world/: level_1.ldtkl  level_7.ldtkl
assets/world/game_world/backups/e54f6bb0-fa90-11f0-abe6-957975aa9344_2026-02-01_13-44-32/: game_world.ldtk
code/: door.cpp  door.h  entity.h  equipment_selection.cpp  equipment_selection.h  extract.cpp  extract.h  game.cpp  game.h  game_math.h  guard.cpp  guard.h  level_selection.cpp  level_selection.h  main.cpp  player.cpp  player.h  render_util.cpp  render_util.h  scene.cpp  scene.h  score.cpp  score.h  switch.cpp  switch.h  treasure.cpp  treasure.h  types.h
raylib/src/: raylib.h  rlgl.h
(+10 files in other folders)
